--- a/inde.html
+++ b/inde.html
@@ -20,6 +20,9 @@
                 Create an index.html (very important) with some content
             </li>
             <li>
+                Commit and push your changes using github desktop
+            </li>
+            <li>
                 Go to Netlify
             </li>
             <li>
